--- a/Front/sports-results/angular.json
+++ b/Front/sports-results/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "62235855-a422-4c9f-8bc0-14a7c1f2d221"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
