--- a/Front/sportLive/angular.json
+++ b/Front/sportLive/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d3d0119a-66cd-409b-a28b-2d2c57a86731"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
