--- a/Front/sportLive/tsconfig.json
+++ b/Front/sportLive/tsconfig.json
@@ -15,6 +15,11 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
+    "typeRoots": [
+      "node_modules/@types",
+       "node_modules/@angular",
+       "node_modules/@angular/common/http"
+      ],
     "module": "es2020",
     "lib": [
       "es2018",
